# ytmusic-deleter

./: .flake8  .gitattributes  .gitignore  .pdm-python  .pre-commit-config.yaml  .style.yapf  DEVELOPING.md  LICENSE  MANIFEST.in  README.md  apt-requirements.txt  bump_versions.sh  deleter.py  fbs.sh  generate_license_key.py  generate_ui_files.sh  gui_release.sh  headers_auth.json  main.py  pip-requirements.txt  pyproject.toml  requirements.txt  setup.py  test_deleter.py  ytmusic_deleter.spec
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-create.sh
.github/: FUNDING.yml
.github/workflows/: build-and-verify.yml  build-deb.yml  build-dmg.yml  build-exe.yml  close-inactive.yml  codeql-analysis.yml  coverage.yml  pdm-update.yml  pytest.yml  release.yml  tag.yml  test-deb.yml  test-exe.yml
app/: pyproject.toml
app/src/main/python/: main.py  sort_playlists_dialog.py
app/src/main/resources/: main_window.ui  progress_dialog.ui
archive/: setup.py
archive/requirements/: base.txt  dev.txt
cli/: README.md  pyproject.toml
cli/src/: auth.py  cli.py  progress.py  uploads.py
cli/tests/: conftest.py  test_cli.py
cli/tests/resources/: test.example.cfg
gui/: test_run_exe.sh
gui/scripts/: freeze_prep.sh  generate_ui_files.sh  test_run_exe.sh
gui/src/freeze/linux/_internal/ytmusicapi/locales/: update_po.sh
gui/src/installer/windows/: Installer.nsi
gui/src/main/icons/: README.md
gui/src/main/python/: add_all_to_playlist_dialog.py  app_settings.py  browser_auth_dialog.py  checkbox_track_listing.py  common.py  delete_uploads_dialog.py  error_reporter.py  gui.spec  main.py  preferences_dialog.py  progress_dialog.py  progress_worker_dialog.py  remove_duplicates_dialog.py  report_preview_dialog.py  settings_dialog.py  sort_playlists_dialog.py  track_listing_dialog.py  tracklist_table_widget.py
gui/src/main/python/library_dialogs/: delete_uploads_dialog.py
gui/src/main/python/playlist_dialogs/: add_all_to_library_dialog.py  add_all_to_playlist_dialog.py  delete_playlists_dialog.py
gui/src/main/python/playlist_dialogs/remove_dupes_dialogs/: checkbox_track_listing.py  remove_duplicates_dialog.py  track_listing_dialog.py  tracklist_table_widget.py
gui/src/main/resources/: add_all_to_playlist_dialog.ui  auth_dialog.ui  checkbox_track_listing.ui  delete_uploads_dialog.ui  main_window.ui  playlist_selection_dialog.ui  preferences.ui  preferences_dialog.ui  settings_dialog.ui  sort_playlist_dialog.ui  track_listing.ui
requirements/: base.txt
src/: cli.py  constants.py  utils.py
src/freeze/windows/_internal/ytmusicapi/locales/: update_mo.sh
src/freeze/windows/ytmusicapi/locales/: README.rst
src/main/python/: auth_dialog.py  license_dialog.py  main.py  main_window.py  progress_dialog.py  sort_playlists_dialog.py  ui_form.py
src/main/resources/: auth_dialog.ui  license_dialog.ui  main_window.ui  progress_dialog.ui  sort_playlists_dialog.ui
tests/: conftest.py  like_many_songs.py  test_actions.py  test_cleanup.py  test_cli.py  test_playlists.py  test_uploads.py
tests/resources/: test.example.cfg
ytmusic_deleter/: README.md  __init__.py  _version.py  _version_git.py  actions.py  auth.py  cli.py  common.py  constants.py  duplicates.py  progress.py  uploads.py  version.py
