[project]
name = "ytmusic-deleter"
version = "2.1.2a2"
authors = [{ name = "apastel", email = "alex.r.pastel@gmail.com" }]
description = "Easily delete your YouTube Music library"
dependencies = [
    "click>=8.1.7",
    "enlighten>=1.12.4",
    "thefuzz>=0.22.1",
    "ytmusicapi>=1.6.0",
]
requires-python = "<3.13,>=3.8.1"
readme = "ytmusic_deleter/README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ytmusic-deleter = "ytmusic_deleter.cli:cli"

[tool.pytest.ini_options]
addopts = "-rA --cov"

[tool.coverage.run]
source = ["ytmusic_deleter"]

[tool.coverage.report]
precision = 2

[tool.black]
line-length = 120

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=7.0.0",
    "black>=24.3.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "coverage>=7.4.4",
]
gui = [
    "fbs @ file:///${PROJECT_ROOT}/fbs_pro-1.2.1.tar.gz",
    "fbs[licensing,sentry,upload]>=1.2.1",
    "PySide6>=6.6.3.1",
]

[tool.pdm.scripts]
# Use this to run any 'fbs' commands from the root, ex: `pdm fbs run` or `pdm fbs freeze`
fbs = "sh fbs.sh"
# Use this to generate the UI files
generate = { shell = "cd %PDM_PROJECT_ROOT%/gui && generate_ui_files.sh" }
# Use this to bump all the project versions
version = { shell = "bump_versions.sh"}

[tool.pdm.build]
includes = ["ytmusic_deleter/**/*.py"]
