[project]
name = "ytmusic-deleter"
dynamic = ["version"]
authors = [{ name = "apastel", email = "alex.r.pastel@gmail.com" }]
description = "Easily delete your YouTube Music library"
dependencies = [
    "click>=8.1.7",
    "enlighten>=1.12.4",
    "thefuzz>=0.22.1",
    "ytmusicapi>=1.10.0",
    "inquirerpy>=0.3.4",
]
requires-python = "<3.13,>=3.10"
readme = "ytmusic_deleter/README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ytmusic-deleter = "ytmusic_deleter.cli:cli"

[tool.pytest.ini_options]
addopts = "-rA --cov"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["ytmusic_deleter"]

[tool.coverage.report]
precision = 2

[tool.black]
line-length = 120

[tool.pdm.dev-dependencies]
lint = [
    "flake8>=7.0.0",
    "black>=24.3.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "coverage>=7.4.4",
    "retry>=0.9.2"
]
gui = [
    "fbs @ file:///${PROJECT_ROOT}/fbs_pro-1.2.1.tar.gz",
    "fbs[licensing,sentry,upload]>=1.2.1",
    "PySide6>=6.6.3.1",
]

[tool.pdm.scripts]
# Use this to run any 'fbs' commands from the root, ex: `pdm fbs run` or `pdm fbs freeze`
fbs = "sh fbs.sh"
# Seems redundant, but takes advantage of pdm's platform-agnostic venv activation
ytmusic-deleter = "ytmusic-deleter"
# Use this to generate the UI files (Windows only)
generate = "bash gui/scripts/generate_ui_files.sh"
# Use this to bump all the project versions
version = "bash bump_versions.sh"
freeze-prep = "bash gui/scripts/freeze_prep.sh"

[tool.pdm.build]
includes = ["ytmusic_deleter/**/*.py"]

[tool.pdm.version]
source = "scm"
write_to = "ytmusic_deleter/_version.py"
write_template = "__version__ = \"{}\"\n"
