[project]
name = "ytmusic-deleter"
dynamic = ["version"]
authors = [{ name = "apastel", email = "alex.r.pastel@gmail.com" }]
description = "Easily delete your YouTube Music library"
dependencies = [
    "click>=8.3.1",
    "enlighten>=1.14.1",
    "thefuzz>=0.22.1",
    "ytmusicapi>=1.11.4",
    "inquirerpy>=0.3.4",
]
requires-python = ">=3.10"
readme = "ytmusic_deleter/README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
ytmusic-deleter = "ytmusic_deleter.cli:main"

[tool.pytest.ini_options]
addopts = "-rA --cov"
log_cli = false

[tool.coverage.run]
source = ["ytmusic_deleter"]

[tool.coverage.report]
precision = 2

[tool.black]
line-length = 120

[tool.pdm.scripts]
# Use this to run any 'fbs' commands from the root, ex: `pdm fbs run` or `pdm fbs freeze`
fbs = "sh fbs.sh"
# Seems redundant, but takes advantage of pdm's platform-agnostic venv activation
ytmusic-deleter = "ytmusic-deleter"
# Use this to generate the UI files (Windows only)
generate = "bash gui/scripts/generate_ui_files.sh"
# Use this to bump all the project versions
version = "bash bump_versions.sh"
freeze-prep = "bash gui/scripts/freeze_prep.sh"
designer = ".venv/bin/pyside6-designer"

[tool.pdm.build]
includes = ["ytmusic_deleter/**/*.py"]

[tool.pdm.version]
source = "scm"
write_to = "ytmusic_deleter/_version.py"
write_template = "__version__ = \"{}\"\n"

[tool.pdm.overrides]
# fbs-1.2.1 pulls PyInstaller too old for Python 3.13+
pyinstaller = ">=6.17.0"

[dependency-groups]
gui = [
    "fbs @ file:///${PROJECT_ROOT}/fbs_pro-1.2.1.tar.gz",
    "fbs[licensing,sentry,upload]>=1.2.1",
    "PySide6>=6.10.1",
]
lint = [
    "flake8>=7.3.0",
    "black>=25.12.0",
    "pre-commit>=4.5.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "coverage>=7.13.1",
    "retry>=0.9.2",
]
