[project]
name = "ytmusic-deleter-app"
version = "2.1.0"
requires-python = "<3.13,>=3.8.1"
dependencies = [
    "PySide6",
    "ytmusicapi",
]

[project.optional-dependencies]
fbs = [
    "fbs @ file:///${PROJECT_ROOT}/fbs_pro-1.2.1.tar.gz",
    "fbs[licensing,sentry,upload]>=1.2.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
