[project]
name = "ytmusic-deleter"
version = "2.1.1"
authors = [{ name = "apastel", email = "alex.r.pastel@gmail.com" }]
description = "Easily delete your YouTube Music library"
requires-python = "<3.13,>=3.8.1"
readme = "./README.md"
dependencies = [
    "click",
    "enlighten",
    "ytmusicapi",
    "thefuzz",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
ytmusic-deleter = "cli:cli"
